--- a/project-back/package.json
+++ b/project-back/package.json
@@ -4,7 +4,8 @@
   "description": "Back part of docker project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Dorian349",
   "license": "ISC",
