--- a/project-front/Dockerfile
+++ b/project-front/Dockerfile
@@ -4,10 +4,9 @@ WORKDIR /usr/src/app
 COPY package.json ./
 RUN npm install
 COPY . .
-RUN npm run build
 
 ### STAGE 2: Run ###
 FROM nginx:1.24.0-alpine
 COPY default.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /usr/src/app/dist/project-back /usr/share/nginx/html
+COPY --from=build /usr/ /usr/share/nginx/html
 EXPOSE 80
