--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,21 @@
 server {
     listen 3000;
     server_name localhost;
+
     location / {
         proxy_pass http://project-front:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location /api {
-        proxy_pass http://project-back:6000;
+
+    location /api/ {
+        rewrite ^/api(/.*)$ $1 break;  # Retire le préfixe /api de l'URL
+        proxy_pass http://project-back:6000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
