--- a/project-back/package.json
+++ b/project-back/package.json
@@ -10,6 +10,9 @@
   "author": "Dorian349",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
+    "os": "^0.1.2"
   }
 }
