--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,14 @@
+upstream loadbalancer {
+    server project-front1:4200;
+    server project-front2:4200;
+}
+    
 server {
     listen 3000;
     server_name localhost;
 
     location / {
-        proxy_pass http://project-front:5000;
+        proxy_pass http://loadbalancer;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,5 +22,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /ws {
+        proxy_pass http://loadbalancer;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 }
