--- a/project-back/package.json
+++ b/project-back/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "os": "^0.1.2"
