--- a/project-front/package.json
+++ b/project-front/package.json
@@ -1,25 +1,47 @@
 {
-  "name": "nodejs-simple-file-upload",
+  "name": "project-front",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.16.2",
-    "multer": "^1.4.5-lts.1"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "ng": "ng",
+    "start": "npm install && ng serve --host 0.0.0.0",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Majidkn/nodejs-simple-file-upload.git"
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Majidkn/nodejs-simple-file-upload/issues"
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.12",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.12",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "fs": "^0.0.1-security",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.13.0"
   },
-  "homepage": "https://github.com/Majidkn/nodejs-simple-file-upload#readme"
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^16.2.9",
+    "@angular/cli": "^16.2.9",
+    "@angular/compiler-cli": "^16.2.0",
+    "@angular/core": "^16.2.12",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.8.10",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "tslib": "^2.6.2",
+    "typescript": "~5.1.3"
+  }
 }
