--- a/project-back/package.json
+++ b/project-back/package.json
@@ -14,6 +14,7 @@
     "fs": "^0.0.1-security",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
-    "os": "^0.1.2"
+    "os": "^0.1.2",
+    "path": "^0.12.7"
   }
 }
